--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <header class="header">
-  <a href="#" class="header-logo">Academic-Bot</a>
+  <a routerLink="dashboard" class="header-logo">Academic-Bot</a>
+  
   <nav class="header-nav">
    
-
   </nav>
 </header>
 <div class="sidebar">
@@ -34,7 +34,7 @@
       <i class="fas fa-history"></i>
       <span class="sidebar-text">Historial</span>
     </div>
-   
+ 
   </div>
 </div>
 <div class="content">
@@ -131,6 +131,7 @@
     </div>
     <button (click)="deleteHistory()">Eliminar historial</button>
   </div>
-  
+
+
   
 </div>
